# yugen

./: .gitignore  README.md  example.ipynb  pyproject.toml  wsgi.py
app/: __init__.py
app/routes/: data_routes.py
app/services/: data_service.py  model_service.py  visualization_service.py
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: index.html
app/utils/: exceptions.py  json_encoder.py  logging.py
tests/: conftest.py  test_data_service.py
yugen/: yugen.py
yugen/static/css/: styles.css
yugen/static/js/: scripts.js
yugen/templates/: index.html
yugen/utils/: data_processing.py
