[tool.poetry]
name = "yugen"
version = "0.1.0"
description = "A Data Analysis Framework"
authors = ["tabibyte"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
pandas = "^2.2.3"
torch = "^2.5.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
